# taiwins

./: .clang-tidy  .gitignore  .gitmodules  3rdparties.cmake  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  config.c  config.h  meson.build  meson_options.txt  shared_config.h
3rdparties/: CMakeLists.txt
clients/: #client.h#  .clang_complete  CMakeLists.txt  appsurf.c  buffer.c  client.c  client.h  common.h  console.c  console.h  console_cmd.c  dummy.c  egl.c  egl.h  eglapp.c  icon.c  image.c  image.h  launcher.c  meson.build  nk_backends.h  nk_egl_backend.h  nk_wl_egl.c  nk_wl_egl.h  shell.c  shell.h  shell_bg.c  shell_bus.c  shell_lock.c  shell_msgs.c  shell_panel.c  shell_ui.c  shellui.c  shellui.h  shellui_gl.c  ui.c  ui.h  update_icon_cache.c  widget.c  widget.h  (+1 more)
clients/console_module/: console_app.c  console_cmd.c  console_module.c  console_module.h  console_path.c
clients/desktop_console/: console.c  console.h  console_app.c  console_cmd.c  console_config_lua.c  console_module.c  console_module.h  console_path.c
clients/desktop_shell/: shell.c  shell.h  shell_bg.c  shell_bus.c  shell_lock.c  shell_lua.c  shell_msgs.c  shell_panel.c  shell_ui.c
clients/nuklear/: .#nk_wl_cairo.c  CMakeLists.txt  dummy.c  nk_wl_cairo.c  nk_wl_egl.c  nk_wl_egl.h  nk_wl_internal.h  nk_wl_vulkan.c
clients/widget/: battery.c  clock.c  widget.c  widget.h  widget_lua.c
clients/widgets/: #widgets.lua#  .#widgets.lua  battery.c  clock.c  widgets.lua
compositor/: backend.h  bindings.c  bindings.h  config.h  egl_renderer.c  input.c  input.h  launcher.c  main.c  meson.build  output.c  output.h  render.h  xdg.h  xwayland.c  xwayland.h
compositor/config/: config.c  config.h  config_bindings.c  config_bindings.h  config_bus.c  config_internal.h  config_lua.c  config_parser.c  config_types.h  lua_helper.h
compositor/desktop/: desktop.h  layout.c  layout.h  layout_floating.c  layout_fullscreen.c  layout_maximized.c  layout_tiling.c  workspace.c  workspace.h  xdg.c  xdg.h  xdg_grab.c  xdg_grab.h  xdg_internal.h
docs/: Doxyfile.in  api.md  apidoc.md  config.lua  data-structure.org  dbus.md  dbus.rst  input-grab.rst  layout.md  libtaiwins.md  libtaiwins.rst  libtwclient.md  libtwclient.rst  lua.md  lua.rst  mainpage.md  meson.build  nuklear-backend.md  nuklear-gui.md  opengl-runtime.md  progress.md  progress.org  progress.rst  screenshots.md  screenshots.rst  taiwins-shell.md  twobjects.md  twobjects.rst  wayland.md  wayland.rst  weston-desktop.md  window_management.md  window_management.rst  xwayland.md  xwayland.rst
include/: input_libinput.h  meson.build  output_device.h  render.h  utils.h
include/taiwins/: backend.h  backend_drm.h  backend_libinput.h  backend_wayland.h  backend_x11.h  dbus_utils.h  engine.h  input_device.h  login.h  output_device.h  profiling.h  render_context.h  render_context_egl.h  render_output.h  render_pipeline.h  render_presentable.h  render_surface.h  render_wsi.h  shell.h  xwayland.h
include/xwayland/: atoms.h  selection.h  xsurface.h  xwm.h
libtaiwins/: bindings.c  dbus_utils.c  input_device.c  meson.build  options.h.in  output_device.c  xwayland.c
libtaiwins/backend/: backend.c  headless.c  meson.build
libtaiwins/compositor/: input.c  input.h  main.c
libtaiwins/config/: config.c  config_bindings.c  config_bus.c  config_internal.h  config_lua.c  config_parser.c  lua_helper.h
libtaiwins/desktop/: layout.c  layout.h  layout_floating.c  layout_fullscreen.c  layout_maximized.c  layout_tiling.c  workspace.c  workspace.h  xdg.c  xdg_grab.c  xdg_internal.h
libtaiwins/engine/: engine.c  internal.h  output.c  seat.c
libtaiwins/include/: config.h  output_device.h
libtaiwins/libinput/: device.c  input.c
libtaiwins/objects/: buffer.c  compositor.c  cursor.c  dmabuf.c  drm_formats.c  egl.c  gestures.c  idle_inhibit.c  input_lock_grab.c  input_method.c  layers.c  logger.c  mat3.c  mat4.c  meson.build  os-compatibility.h  output.c  plane.c  popup_grab.c  profiler.c  region.c  serial_engine.c  subprocess.c  subsurface.c  surface.c  text_input.c  utils.c  vec3.c  viewporter.c  virtual_keyboard.c  xdg_output.c
libtaiwins/render/: egl_render_context.c  egl_render_context.h  egl_shaders.c  egl_shaders.h  egl_simple_pipeline.c  egl_texture.c  meson.build  (+4 more)
objects/: buffer.c  compositor.c  cursor.c  dmabuf.c  drm_formats.c  egl.c  gestures.c  input_method.c  layers.c  logger.c  mat3.c  mat4.c  matrix.c  meson.build  os-compatibility.c  output.c  plane.c  popup_grab.c  presentation_feedback.c  profiler.c  region.c  subprocess.c  subsurface.c  surface.c  surface.c.bak  text_input.c  utils.c  vec3.c  viewporter.c  xdg_output.c
protocols/: CMakeLists.txt  linux-dmabuf.xml  meson.build  taiwins-console.xml  taiwins-shell.xml  taiwins-theme.xml  taiwins_console.xml  taiwins_desktop.xml  taiwins_shell.xml  taiwins_theme.xml
server/: .clang_complete  CMakeLists.txt  backend.c  backend.h  bindings.c  bindings.h  bus.c  bus.h  commander.c  compositor.c  compositor.h  config.c  config.h  console.c  desktop.c  desktop.h  drm_formats.c  input.c  input.h  input_device.c  launcher.c  layer_render.c  lua_helper.h  main.c  meson.build  output_device.c  parser.c  shell.c  shell.h  taiwins.c  taiwins.h  theme.c  theme_lua.c  weston.h  xwayland.c
src/: .clang_complete  CMakeLists.txt  backend.c  backend.h  desktop.c  desktop.h  input.c  launcher.c  main.c  shell.c  shell.c.bak  shell.h  taiwins.c  taiwins.h  weston.h
test/: .clang_complete  CMakeLists.txt  a.out  buffer.c  cairo_tutorial.c  config.lua  drm-test.c  dummy-surface-test-gl.c  dummy-surface-test.c  egl-context-test.c  fakedlclose.c  file_add_epoll.c  headless-test.c  input.1.c  input.1.h  input.c  input.h  input_data.c  input_data.h  luascript.lua  luatest.c  matrix-test.c  meson.build  shell.c  test-input_nosurface.c  test-pixman.c  test-weston-desktop.c  test-xkbcommon.c  test_binding_register.c  test_cairo_concept.c  test_cairo_user_font.c  test_desktop.c  test_desktop.h  test_event_queue.c  test_fontconfig.c  test_nk_cairo.c  test_nk_egl.c  test_nk_vulkan.c  test_queue.c  test_raxinsert.c  (+10 more)
(+321 files in other folders)
