option(
  'enable-profiler',
  type: 'boolean',
  value: false,
  description: 'Enable taiwins profiler'
)

option(
  'build-doc',
  type: 'boolean',
  value: false,
  description: 'Enable doxygen build'
)

option(
  'debug-damage',
  type: 'boolean',
  value: false,
  description: 'Paint the damage updating region'
)
