option('profiler',
       type: 'feature',
       value: 'disabled',
       description: 'Enable taiwins profiler'
)

option('build-doc',
       type: 'boolean',
       value: false,
       description: 'Enable doxygen build'
)

option('rendering-debug',
       type: 'combo',
       choices: ['none', 'damage', 'clip'],
       value: 'none',
       description: 'Enable the various rendering debugging options'
)

option('x11-backend',
       type: 'feature',
       value: 'auto',
       description: 'enable X11 backend')

option('xwayland',
       type: 'feature',
       value: 'auto',
       description: 'enable xwayland feature')
